--- a/app/templates/admin/preview_list.html
+++ b/app/templates/admin/preview_list.html
@@ -21,7 +21,7 @@
                                        placeholder="请输入关键字...">
 
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i>
+                                    <button type="submit" class="btn btn-default" id="search_preview"><i class="fa fa-search"></i>
                                     </button>
                                 </div>
                             </div>
@@ -69,5 +69,9 @@
             $("#g-4").addClass("active")
             $("#g-4-2").addClass("active")
         });
+         $("#search_preview").click(function(){
+            var key_preview=$("#key_preview").val();
+            location.href="{{ url_for("admin.preview_search",page=1) }}?key=" + key_preview;
+        } );
     </script>
 {% endblock %}
