--- a/app/templates/home/loginlog.html
+++ b/app/templates/home/loginlog.html
@@ -30,7 +30,7 @@
                         <td>{{ v.id }}</td>
                         <td>{{ v.logontime }}</td>
                         <td>{{ v.ip }}</td>
-                        <td>云南昆明</td>
+                        <td>{{ iplocation }}</td>
                     </tr>
                     {% endfor %}
                 </table>
