--- a/app/templates/admin/admin_list.html
+++ b/app/templates/admin/admin_list.html
@@ -18,10 +18,10 @@
                         <div class="box-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
                                 <input type="text" name="table_search" class="form-control pull-right"
-                                       placeholder="请输入关键字...">
+                                       placeholder="请输入关键字..."id="key_admin">
 
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i>
+                                    <button type="submit" class="btn btn-default" id="do_search"><i class="fa fa-search"></i>
                                     </button>
                                 </div>
                             </div>
@@ -68,5 +68,9 @@
             $("#g-11").addClass("active")
             $("#g-11-2").addClass("active")
         });
+        $("#do_search").click(function () {
+            var key_admin=$("#key_admin").val();
+            location.href="{{ url_for("admin.admin_search",page=1) }}?key="+key_admin;
+        })
     </script>
 {% endblock %}
