--- a/app/templates/admin/adminloginlog_list.html
+++ b/app/templates/admin/adminloginlog_list.html
@@ -19,10 +19,10 @@
                         <div class="box-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
                                 <input type="text" name="table_search" class="form-control pull-right"
-                                       placeholder="请输入关键字...">
+                                       placeholder="请输入关键字..." id="key_log">
 
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i>
+                                    <button type="submit" class="btn btn-default" id="do_search"><i class="fa fa-search"></i>
                                     </button>
                                 </div>
                             </div>
@@ -63,5 +63,9 @@
             $("#g-8").addClass("active")
             $("#g-8-2").addClass("active")
         });
+        $("#do_search").click(function () {
+            var key_log=$("#key_log").val();
+            location.href="{{ url_for("admin.adminloginlog_search",page=1) }}?key=" + key_log;
+        })
     </script>
 {% endblock %}
