--- a/app/templates/admin/moviecol_list.html
+++ b/app/templates/admin/moviecol_list.html
@@ -18,10 +18,10 @@
                             <div class="box-tools">
                                 <div class="input-group input-group-sm" style="width: 150px;">
                                     <input type="text" name="table_search" class="form-control pull-right"
-                                           placeholder="请输入关键字...">
+                                           placeholder="请输入关键字..." id="key_moviecol">
 
                                     <div class="input-group-btn">
-                                        <button type="submit" class="btn btn-default"><i class="fa fa-search"></i>
+                                        <button type="submit" class="btn btn-default" id="do_search"><i class="fa fa-search"></i>
                                         </button>
                                     </div>
                                 </div>
@@ -67,5 +67,9 @@
             $("#g-7").addClass("active")
             $("#g-7-1").addClass("active")
         });
+        $("#do_search").click(function () {
+            var key_col=$("#key_moviecol").val();
+            location.href="{{ url_for("admin.moviecol_search",page=1) }}?key="+key_col
+        })
     </script>
 {% endblock %}
