--- a/app/templates/admin/preview_comment_list.html
+++ b/app/templates/admin/preview_comment_list.html
@@ -19,9 +19,9 @@
                         <div class="box-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
                                 <input type="text" name="table_search" class="form-control pull-right"
-                                       placeholder="请输入关键字...">
+                                       placeholder="请输入关键字..." id="key_comment">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i>
+                                    <button type="submit" class="btn btn-default" id="do_search"><i class="fa fa-search"></i>
                                     </button>
                                 </div>
                             </div>
@@ -43,7 +43,7 @@
                                                 {{  v.addtime }}&nbsp;
                                             </span>
                                         </span>
-                                    关于电影<a>《{{ v.movie.title }}》</a>的评论：{{ v.content }}
+                                    关于电影<a>《{{ v.movie.title }}》</a>的评论：{{ v.content | safe }}
                                     <br><a class="label label-danger pull-right" href="{{ url_for('admin.comment_del',id=v.id) }}">删除</a></br>
                                 </div>
                             {% endfor %}
@@ -64,5 +64,9 @@
             $("#g-6").addClass("active")
             $("#g-6-1").addClass("active")
         });
+        $("#do_search").click(function () {
+            var key_comment=$("#key_comment").val();
+            location.href="{{ url_for("admin.comment_search",page=1) }}?key=" + key_comment;
+        })
     </script>
 {% endblock %}
