--- a/app/templates/admin/preview_list.html
+++ b/app/templates/admin/preview_list.html
@@ -17,8 +17,8 @@
                         <h3 class="box-title">预告列表</h3>
                         <div class="box-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
-                                <input type="text" name="table_search" class="form-control pull-right"
-                                       placeholder="请输入关键字...">
+                                <input type="text" name="table_search" class="form-control pull-right" id="key_preview"
+                                       placeholder="请输入关键字..." >
 
                                 <div class="input-group-btn">
                                     <button type="submit" class="btn btn-default" id="search_preview"><i class="fa fa-search"></i>
