--- a/app/templates/admin/role_list.html
+++ b/app/templates/admin/role_list.html
@@ -19,10 +19,10 @@
                         <div class="box-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
                                 <input type="text" name="table_search" class="form-control pull-right"
-                                       placeholder="请输入关键字...">
+                                       placeholder="请输入关键字..." id="key_role">
 
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i>
+                                    <button type="submit" class="btn btn-default" id="do_search"><i class="fa fa-search"></i>
                                     </button>
                                 </div>
                             </div>
@@ -83,5 +83,9 @@
             $("#g-10").addClass("active")
             $("#g-10-1").addClass("active")
         });
+        $("#do_search").click(function () {
+            var key_role=$("#key_role").val();
+            location.href="{{ url_for("admin.role_search",page=1) }}?key="+key_role;
+        })
     </script>
 {% endblock %}
