--- a/app/templates/admin/user_list.html
+++ b/app/templates/admin/user_list.html
@@ -19,9 +19,9 @@
                             <div class="box-tools">
                                 <div class="input-group input-group-sm" style="width: 150px;">
                                     <input type="text" name="table_search" class="form-control pull-right"
-                                           placeholder="请输入关键字...">
+                                           placeholder="请输入关键字..." id="key_user">
                                     <div class="input-group-btn">
-                                        <button type="submit" class="btn btn-default"><i class="fa fa-search"></i>
+                                        <button type="submit" class="btn btn-default" id="user_search"><i class="fa fa-search"></i>
                                         </button>
                                     </div>
                                 </div>
@@ -88,5 +88,9 @@
             $("#g-5").addClass("active")
             $("#g-5-1").addClass("active")
         });
+        $("#user_search").click(function () {
+            var key_user=$("#key_user").val();
+            location.href="{{ url_for("admin.user_search",page=1) }}?key=" + key_user;
+        })
     </script>
 {% endblock %}
