--- a/app/templates/admin/userloginlog_list.html
+++ b/app/templates/admin/userloginlog_list.html
@@ -19,10 +19,10 @@
                         <div class="box-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
                                 <input type="text" name="table_search" class="form-control pull-right"
-                                       placeholder="请输入关键字...">
+                                       placeholder="请输入关键字..."id="key_userlog">
 
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i>
+                                    <button type="submit" class="btn btn-default" id="do_search"><i class="fa fa-search"></i>
                                     </button>
                                 </div>
                             </div>
@@ -62,5 +62,9 @@
             $("#g-8").addClass("active")
             $("#g-8-3").addClass("active")
         });
+        $("#do_search").click(function () {
+            var key_userlog=$("#key_userlog").val();
+            location.href="{{ url_for("admin.userloginlog_search",page=1) }}?key="+ key_userlog;
+        })
     </script>
 {% endblock %}
