--- a/app/templates/home/animation.html
+++ b/app/templates/home/animation.html
@@ -17,36 +17,73 @@
 			<a href="javascript:void(0)" class="banner_btn btn_next js_next">
 				<span class="banner_btn_arrow"><i></i></span>
 			</a>
-			<ul>
-                {% for v in preview.items %}
-				<li id="imgCard{{ v.id - 1}}">
-					<a href=""><span style="opacity:0;"></span></a>
-					<img src="{{ url_for('static',filename="uploads/preview/"+v.logo) }}" alt="">
-					<p style="bottom:0">{{ v.title }}</p>
-				</li>
-                {% endfor %}
+            <div class="carousel-inner">
+                <div id="myCarousel" class="carousel slide">
+	            <!-- 轮播（Carousel）指标 -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+                <!-- 轮播（Carousel）项目 -->
+                    <div class="carousel-inner">
+                        <div class="item">
+                            <img src="{{ url_for('static',filename="uploads/main_banner/"+"big0120150101183428.jpg") }}" alt="First slide">
+                            <div class="carousel-caption">标题 1</div>
+                        </div>
+                        <div class="item">
+                            <img src="{{ url_for('static',filename="uploads/main_banner/"+"big0320150101183351.jpg")}}" alt="Second slide">
+                            <div class="carousel-caption">标题 2</div>
+                        </div>
+                        <div class="item">
+                            <img src="{{ url_for('static',filename="uploads/main_banner/"+"big0420150101224343.jpg")}}" alt="Third slide">
+                            <div class="carousel-caption">标题 3</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 轮播（Carousel）导航 -->
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 
-{#				<li id="imgCard1">#}
+
+
+
+
+
+{#			<ul>#}
+{#				<li id="imgCard1" class="item active">#}
 {#					<a href=""><span style="opacity:0.4;"></span></a>#}
-{#					<img src="main_banner/big0120150101183428.jpg" alt="">#}
+{#					<img src="{{ url_for('static',filename="uploads/main_banner/"+"big0120150101183428.jpg") }}" alt="">#}
 {#					<p>乐侃有声节目第二期</p>#}
 {#				</li>#}
-{#				<li id="imgCard2">#}
+{#				<li id="imgCard2" class="item">#}
 {#					<a href=""><span style="opacity:0.4;" ></span></a>#}
-{#					<img src="main_banner/big0320150101183351.jpg" alt="">#}
+{#					<img src="{{ url_for('static',filename="uploads/main_banner/"+"big0320150101183351.jpg")}}" alt="">#}
 {#					<p>乐见大牌：”荣“耀之声，”维“我独尊</p>#}
 {#				</li>#}
-{#				<li id="imgCard3">#}
+{#				<li id="imgCard3" class="item">#}
 {#					<a href=""><span style="opacity:0.4;"></span></a>#}
-{#					<img src="main_banner/big0420150101224343.jpg" alt="">#}
+{#					<img src="{{ url_for('static',filename="uploads/main_banner/"+"big0420150101224343.jpg")}}"alt="">#}
 {#					<p>王力宏四年心血结晶</p>#}
 {#				</li>#}
 {#				<li id="imgCard4">#}
 {#					<a href=""><span style="opacity:0.4;"></span></a>#}
-{#					<img src="main_banner/big0720150102210934.jpg" alt="">#}
+{#                    {{ url_for("home.play",page=1,id=id) }}#}
+{#					<img src="{{ url_for('static',filename="uploads/main_banner/"+"big0720150102210934.jpg")}} "alt="">#}
 {#					<p>MV精选：《武媚》女神团美艳大比拼</p>#}
 {#				</li>#}
-			</ul>
+{#			</ul>#}
+{#            </div>#}
 			<!--火狐倒影图层-->
 			<p id="rflt"></p>
 			<!--火狐倒影图层-->
@@ -60,7 +97,6 @@
 </div>
 <!--轮播图 结束 -->
 
-<script type="text/javascript" src="{{ url_for("static",filename="anim/js/jquery.js") }}"></script>
 <script type="text/javascript" src="{{ url_for("static",filename="anim/js/jquery.js") }}"></script>
 <script type="text/javascript" src="{{ url_for("static",filename="admin/bootstrap/js/bootstrap.js/bootstrap.min.js") }}"></script>
 
