--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -40,52 +40,47 @@
                         <td style="width:10%;">电影标签</td>
                         <td style="width:90%;">
                             {% for v in tag %}
-                            <a class="label label-info"><span class="glyphicon glyphicon-tag btn-xs"></span>{{ v.name }}</a>
+                            <a  href="{{ url_for("home.index") }}?tid={{ v.id }}&star={{ p['star'] }}&time={{ p['time'] }}&pm={{ p['pm'] }}&cm={{ p['cm'] }}" class="label label-info"><span class="glyphicon glyphicon-tag btn-xs"></span>{{ v.name }}</a>
                             &nbsp
                         {% endfor %}
                     </tr>
                     <tr>
                         <td>电影星级</td>
                         <td>
-                            <a class="label label-warning"><span class="glyphicon glyphicon-star btn-xs"></span>&nbsp;一星</a>
+                            {% for v in range(1,6) %}
+                            <a href="{{ url_for("home.index") }}?tid={{ p['tid'] }}&star={{ v }}&time={{ p['time'] }}&pm={{ p['pm'] }}&cm={{ p['cm'] }}" class="label label-warning"><span class="glyphicon glyphicon-star btn-xs"></span>&nbsp;{{ v }}星</a>
                             &nbsp;
-                            <a class="label label-warning"><span class="glyphicon glyphicon-star btn-xs"></span>&nbsp;二星</a>
-                            &nbsp;
-                            <a class="label label-warning"><span class="glyphicon glyphicon-star btn-xs"></span>&nbsp;三星</a>
-                            &nbsp;
-                            <a class="label label-warning"><span class="glyphicon glyphicon-star btn-xs"></span>&nbsp;四星</a>
-                            &nbsp;
-                            <a class="label label-warning"><span class="glyphicon glyphicon-star btn-xs"></span>&nbsp;五星</a>
+                            {% endfor %}
                         </td>
                     </tr>
                     <tr>
                         <td>上映时间</td>
                         <td>
-                            <a class="label label-default"><span class="glyphicon glyphicon-time btn-xs"></span>&nbsp;最近</a>
+                            <a href="{{ url_for("home.index") }}?tid={{ p['tid'] }}&star={{ p['star'] }}&time=1&pm={{ p['pm'] }}&cm={{ p['cm'] }}"class="label label-default"><span class="glyphicon glyphicon-time btn-xs"></span>&nbsp;最近</a>
                             &nbsp;
-                            <a class="label label-default"><span class="glyphicon glyphicon-time btn-xs"></span>&nbsp;2017</a>
+                            <a href="{{ url_for("home.index") }}?tid={{ p['tid'] }}&star={{  p['star']  }}&time=2&pm={{ p['pm'] }}&cm={{ p['cm'] }}"class="label label-default"><span class="glyphicon glyphicon-time btn-xs"></span>&nbsp;2017</a>
                             &nbsp;
-                            <a class="label label-default"><span class="glyphicon glyphicon-time btn-xs"></span>&nbsp;2016</a>
+                            <a href="{{ url_for("home.index") }}?tid={{ p['tid'] }}&star={{  p['star'] }}&time=3&pm={{ p['pm'] }}&cm={{ p['cm'] }}" class="label label-default"><span class="glyphicon glyphicon-time btn-xs"></span>&nbsp;2016</a>
                             &nbsp;
-                            <a class="label label-default"><span class="glyphicon glyphicon-time btn-xs"></span>&nbsp;2015</a>
+                            <a href="{{ url_for("home.index") }}?tid={{ p['tid'] }}&star={{ p['star']  }}&time=4&pm={{ p['pm'] }}&cm={{ p['cm'] }}"class="label label-default"><span class="glyphicon glyphicon-time btn-xs"></span>&nbsp;2015</a>
                             &nbsp;
-                            <a class="label label-default"><span class="glyphicon glyphicon-time btn-xs"></span>&nbsp;更早</a>
+                            <a href="{{ url_for("home.index") }}?tid={{ p['tid'] }}&star={{  p['star']  }}&time=5&pm={{ p['pm'] }}&cm={{ p['cm'] }}" class="label label-default"><span class="glyphicon glyphicon-time btn-xs"></span>&nbsp;更早</a>
                         </td>
                     </tr>
                     <tr>
                         <td>播放数量</td>
                         <td>
-                            <a class="label label-success"><span class="glyphicon glyphicon-arrow-down btn-xs"></span>&nbsp;从高到底</a>
+                            <a  href="{{ url_for("home.index") }}?tid={{ p['tid'] }}&star={{  p['star']  }}&time={{ p['time'] }}&pm=1&cm={{ p['cm'] }}"class="label label-success"><span class="glyphicon glyphicon-arrow-down btn-xs"></span>&nbsp;从高到底</a>
                             &nbsp;
-                            <a class="label label-danger"><span class="glyphicon glyphicon-arrow-up btn-xs"></span>&nbsp;从低到高</a>
+                            <a href="{{ url_for("home.index") }}?tid={{ p['tid'] }}&star={{  p['star']  }}&time={{ p['time'] }}&pm=2&cm={{ p['cm'] }}"class="label label-danger"><span class="glyphicon glyphicon-arrow-up btn-xs"></span>&nbsp;从低到高</a>
                         </td>
                     </tr>
                     <tr>
                         <td>评论数量</td>
                         <td>
-                            <a class="label label-success"><span class="glyphicon glyphicon-arrow-down btn-xs"></span>&nbsp;从高到底</a>
+                            <a href="{{ url_for("home.index") }}?tid={{ p['tid'] }}&star={{  p['star']  }}&time={{ p['time'] }}&pm={{ p['pm'] }}&cm=1" class="label label-success"><span class="glyphicon glyphicon-arrow-down btn-xs"></span>&nbsp;从高到底</a>
                             &nbsp;
-                            <a class="label label-danger"><span class="glyphicon glyphicon-arrow-up btn-xs"></span>&nbsp;从低到高</a>
+                            <a  href="{{ url_for("home.index") }}?tid={{ p['tid'] }}&star={{  p['star']  }}&time={{ p['time'] }}&pm={{ p['pm'] }}&cm=2" class="label label-danger"><span class="glyphicon glyphicon-arrow-up btn-xs"></span>&nbsp;从低到高</a>
                         </td>
                     </tr>
                 </table>
@@ -96,7 +91,7 @@
                     <!--<img data-original="holder.js/262x166"
                              class="img-responsive lazy center-block" alt="">-->
                     <a href="{{ url_for('home.play',id=v.id,page=1) }}" class="thumbnail" style="border-radius: 10px">
-                        <img src="{{ url_for('static',filename='uploads/movie/'+v.logo) }}" class="img-responsive center-block" alt="">
+                        <img src="{{ url_for('static',filename='uploads/movie/'+v.logo) }}" class="img-responsive center-block" alt="" style="width: 262px;height: 166px;">
                     </a>
                     <div class="text-left" style="margin-left:auto;margin-right:auto;width:210px;">
                         <span style="color:#999;font-style: italic;">{{ v.title }}</span><br>
