--- a/app/templates/home/layout.html
+++ b/app/templates/home/layout.html
@@ -27,7 +27,7 @@
 
 <body>
 <!--导航-->
-<nav class="navbar navbar-default navbar-fixed-top" style="background-color: #f7ecb5">
+<nav class="navbar navbar-default navbar-fixed-top" style="background-color: #b0b0b0">
     <div class="container">
         <!--小屏幕导航按钮和logo-->
         <div class="navbar-header">
@@ -42,7 +42,7 @@
         </div>
         <!--小屏幕导航按钮和logo-->
         <!--导航-->
-        <div class="navbar-collapse collapse" style="background-color: #f7ecb5">
+        <div class="navbar-collapse collapse" style="background-color: #b0b0b0">
             <form class="navbar-form navbar-left" role="search" style="margin-top:18px">
                 <div class="form-group input-group">
                     <input type="text" class="form-control" placeholder="请输入电影名！"id="key_movie">
@@ -53,28 +53,28 @@
             </form>
             <ul class="nav navbar-nav navbar-right" >
                 <li>
-                    <a class="curlink" href="{{ url_for('home.index',page=1) }}" style="background-color: #f7ecb5"><span
+                    <a class="curlink" href="{{ url_for('home.index',page=1) }}" style="background-color: #b0b0b0"><span
                             class="glyphicon glyphicon-film" ></span>&nbsp;电影</a>
                 </li>
                 <li>
                     {%  if not current_user.is_authenticated %}
-                    <a class="curlink" href="{{ url_for('home.login') }}"  style="background-color: #f7ecb5"><span
+                    <a class="curlink" href="{{ url_for('home.login') }}"  style="background-color: #b0b0b0"><span
                             class="glyphicon glyphicon-log-in"></span>&nbsp;登录</a>
                     {% endif %}
                 </li>
 
                 <li>
-                    <a class="curlink" href="{{ url_for('home.register') }}"  style="background-color: #f7ecb5"><span
+                    <a class="curlink" href="{{ url_for('home.register') }}"  style="background-color: #b0b0b0"><span
                             class="glyphicon glyphicon-plus"></span>&nbsp;注册</a>
                 </li>
                 <li>
                     {% if current_user.is_authenticated %}
-                    <a class="curlink" href="{{ url_for('home.logout') }}" style="background-color: #f7ecb5"><span
+                    <a class="curlink" href="{{ url_for('home.logout') }}" style="background-color: #b0b0b0"><span
                             class="glyphicon glyphicon-log-out" ></span>&nbsp;退出</a>
                     {% endif %}
                 </li>
                 <li>
-                    <a class="curlink" href="{{ url_for('home.user') }}" style="background-color: #f7ecb5"><span class="glyphicon glyphicon-user"></span>&nbsp;会员</a>
+                    <a class="curlink" href="{{ url_for('home.user') }}" style="background-color: #b0b0b0"><span class="glyphicon glyphicon-user"></span>&nbsp;会员</a>
                 </li>
             </ul>
         </div>
