--- a/app/templates/home/login.html
+++ b/app/templates/home/login.html
@@ -7,16 +7,16 @@
 {% block content %}
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-primary">
+            <div class="panel panel-primary" style="margin-top: 70px">
                 <div class="panel-heading">
                     <h3 class="panel-title"><span class="glyphicon glyphicon-log-in"></span>&nbsp;会员登录</h3>
                 </div>
                 <div class="panel-body">
-                    <form role="form" method="post">
+                    <form role="form" method="post" >
                         <fieldset>
                         {% for message in get_flashed_messages(category_filter=["err"]) %}
                             <div class="alert alert-danger alert-dismissable">
-                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;
+                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true" style="width: 300px;height: 30px;">&times;
                                 </button>
                                 <h6>{{ message }}</h6>
                             </div>
@@ -44,10 +44,7 @@
                                 {{ form.remember_me }}
                             </div>
                             <div class="row">
-                                <div class="col-xs-4">
-{#                                    <a href="{{ url_for("home.user") }}" class="btn btn-lg btn-success btn-block"></a>#}
-                                </div>
-                                <div class="col-xs-4">
+                                <div class="col-xs-12">
                                     {{ form.csrf_token }}
                                     {{ form.submit }}
                                 </div>
